--- a/src/app/main/proposal/list/proposalList.component.html
+++ b/src/app/main/proposal/list/proposalList.component.html
@@ -6,28 +6,14 @@
   <!-- CENTER -->
   <div class="center">
     <!-- HEADER -->
-    <div
-      class="header accent"
-      fxLayout="row wrap"
-      fxLayoutAlign="space-between center"
-    >
+    <div class="header accent" fxLayout="row wrap" fxLayoutAlign="space-between center">
       <!-- APP TITLE -->
-      <div
-        class="logo mb-24 mb-md-0"
-        fxLayout="row"
-        fxLayoutAlign="start center"
-      >
-        <mat-icon
-          class="logo-icon s-32 mr-16"
-          [@animate]="{ value: '*', params: { delay: '50ms', scale: '0.2' } }"
-        >
+      <div class="logo mb-24 mb-md-0" fxLayout="row" fxLayoutAlign="start center">
+        <mat-icon class="logo-icon s-32 mr-16" [@animate]="{ value: '*', params: { delay: '50ms', scale: '0.2' } }">
           format_list_numbered
         </mat-icon>
-        <span
-          class="logo-text h1"
-          [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
-        >
-        PROPOSALList
+        <span class="logo-text h1" [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }">
+          PROPOSALList
         </span>
       </div>
       <!-- / APP TITLE -->
@@ -47,7 +33,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <app-prop-list [rows]="rows"></app-prop-list>
+        <app-prop-list [rows]="rows" (editProposalBack)="editProposalBack($event)"></app-prop-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
@@ -55,13 +41,7 @@
   <!-- /CENTER -->
 </div>
 <!-- ADD CONTACT BUTTON -->
-<button
-  fxLayoutAlign="center center"
-  class="mat-fab warn"
-  id="add-button"
-  aria-label="add"
-  (click)="clickAdd()"
->
+<button fxLayoutAlign="center center" class="mat-fab warn" id="add-button" aria-label="add" (click)="clickAdd()">
   <mat-icon>add</mat-icon>
 </button>
 <!-- / ADD CONTACT BUTTON -->
