--- a/src/app/main/estimate/components/facesheet/facesheet.component.html
+++ b/src/app/main/estimate/components/facesheet/facesheet.component.html
@@ -1,23 +1,25 @@
-
 <div fxLayout="row wrap" class="containerfile">
   <div fxFlex="20" fxLayoutAlign="center" class="single-file" *ngFor="let file of files; let i = index">
-    <img *ngIf="file.type === 'application/pdf'" src="https://image.flaticon.com/icons/svg/337/337946.svg" width="45px"
+    <img *ngIf="file.type === 'application/pdf'" src="https://image.flaticon.com/icons/svg/136/136522.svg" width="45px"
       alt="file">
-    <img *ngIf="file.type === 'application/doc'" src="https://image.flaticon.com/icons/svg/337/337932.svg" width="45px"
+    <img *ngIf="file.type === 'application/doc'" src="https://image.flaticon.com/icons/svg/136/136521.svg" width="45px"
       alt="file">
-    <img *ngIf="file.type === 'application/zip'" src="https://image.flaticon.com/icons/svg/337/337960.svg" width="45px"
+    <img *ngIf="file.type === 'application/zip'" src="https://image.flaticon.com/icons/svg/136/136544.svg" width="45px"
       alt="file">
-    <img *ngIf="file.type === 'image/jpeg'" src="https://image.flaticon.com/icons/svg/337/337940.svg" width="45px"
+    <img *ngIf="file.type === 'image/jpeg'" src="https://image.flaticon.com/icons/svg/35/35896.svg" width="45px"
       alt="file">
     <img *ngIf="file.type === 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'"
-      src="https://image.flaticon.com/icons/svg/337/337958.svg" width="45px" alt="file">
-    <img *ngIf="file.type === 'application/vnd.ms-excel'" src="https://image.flaticon.com/icons/svg/337/337958.svg"
+      src="https://image.flaticon.com/icons/svg/136/136532.svg" width="45px" alt="file">
+    <img *ngIf="file.type === 'application/vnd.ms-excel'" src="https://image.flaticon.com/icons/svg/136/136532.svg"
       width="45px" alt="file">
+    <img *ngIf="!file.type" src="https://image.flaticon.com/icons/svg/136/136549.svg" width="45px" alt="file">
+
     <h4 class="text-container">
       {{ file.name }}
     </h4>
     <div>
-      <img src="https://image.flaticon.com/icons/svg/753/753345.svg" class="delete" width="20px" alt="file" (click)="deleteFile(i)">
+      <img src="https://image.flaticon.com/icons/svg/753/753345.svg" class="delete" width="20px" alt="file"
+        (click)="deleteFile()">
     </div>
   </div>
 
