--- a/src/app/main/proposal/components/prop-list/prop-list.component.html
+++ b/src/app/main/proposal/components/prop-list/prop-list.component.html
@@ -35,7 +35,7 @@
           </button>
 
           <mat-menu #moreMenu>
-            <button mat-menu-item aria-label="edit" (click)="editProposal('edit', rowIndex)">
+            <button mat-menu-item aria-label="edit" (click)="editProposalData('edit', rowIndex)">
               <mat-icon>edit</mat-icon>
               <span>แก้ไขโครงการ</span>
             </button>
