--- a/src/app/main/proposal/list/proposalList.component.html
+++ b/src/app/main/proposal/list/proposalList.component.html
@@ -33,7 +33,7 @@
     <div class="content-card">
       <!-- CONTENT -->
       <div class="content">
-        <app-prop-list [rows]="rows" (editProposalBack)="editProposalBack($event)"></app-prop-list>
+        <app-prop-list [rows]="rows" (editProposal)="editProposal($event)"></app-prop-list>
       </div>
     </div>
     <!-- /CONTENT CARD -->
