--- a/src/app/main/proposal/components/form001/form001.component.html
+++ b/src/app/main/proposal/components/form001/form001.component.html
@@ -71,7 +71,7 @@
     >
       <mat-form-field class="example-full-width" appearance="outline" fxFlex>
         <mat-label>ปีเริ่มต้น</mat-label>
-        <input matInput />
+        <input matInput formControlName="startdate" name="startdate"/>
       </mat-form-field>
     </div>
     <div
@@ -82,7 +82,7 @@
     >
       <mat-form-field class="example-full-width" appearance="outline" fxFlex>
         <mat-label>ปีสิ้นสุด</mat-label>
-        <input matInput />
+        <input matInput formControlName="enddate" name="enddate"/>
       </mat-form-field>
     </div>
   </div>
@@ -96,7 +96,7 @@
     >
       <mat-form-field class="example-full-width" appearance="outline" fxFlex>
         <mat-label>งบประมาณทั้งโครงการ</mat-label>
-        <input matInput />
+        <input matInput formControlName="budgetsummary" name="budgetsummary"/>
       </mat-form-field>
     </div>
     <div
@@ -107,7 +107,7 @@
     >
       <mat-form-field class="example-full-width" appearance="outline" fxFlex>
         <mat-label>งบประมาณที่จะใช้ในปีนี้</mat-label>
-        <input matInput />
+        <input matInput formControlName="budgetinyear" name="budgetinyear"/>
       </mat-form-field>
     </div>
   </div>
