--- a/src/app/main/estimate/esrimate/estimate.component.html
+++ b/src/app/main/estimate/esrimate/estimate.component.html
@@ -32,8 +32,7 @@
       <div class="content">
         <mat-tab-group fxFlex>
           <mat-tab label="ข้อมูลเสนอโครงการ">
-            <app-proposal-form [proposalForm]="proposalForm" [plan]="plan" [product]="product" [activity]="activity"
-            [moneysource]="moneysource"></app-proposal-form>
+            <app-proposal-form [proposalForm]="proposalForm" [lovData]="lovData"></app-proposal-form>
 
             <div fxLayout="row" class="margin-bottom" fxLayoutAlign="center">
               <div fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="center">
