--- a/src/app/main/estimate/components/facesheet/facesheet.component.html
+++ b/src/app/main/estimate/components/facesheet/facesheet.component.html
@@ -1,3 +1,120 @@
+<div fxLayout="column">
+  <div fxLayout="row" fxLayoutAlign="end" class="pr-20">
+    <p>กผง.003/3</p>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="80" fxLayoutAlign="center">
+      
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="20" class="pr-20" fxLayoutAlign="end">
+      (ทั่วไป)
+    </div>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <h2>แบบประมาณการ</h2>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>หน่วยงาน</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">สำนักเลขาธิการ<span>กลุ่ม/ฝ่าย ประชาสัมพันธ์์และเผยแพร่</span></span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>รายการ</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">โครงการจัดซื้อครุภัณฑ์โฆษณาและเผยแพร่ ประจะปีงบประมาณ 2563</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>แผนงาน</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">พื้นฐานด้านการสร้างการเติบโตบนคุณภาพชีวิตที่เป็นมิตรต่อสิ่งแวดล้อม</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>ผลผลิต/โครงการ</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">การบริหารจัดการทรัพยากรน้ำทั้งระบบ</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>กิจกรรม</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">การบริหารงานการจัดการทรัพยากรน้ำทั้งระบบ</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>ประเภทรายจ่าย</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">งบลงทุน</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+      <p>รวมเงิน</p>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">961,700.00 บาท</span>
+      </p>
+    </div>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="30" fxLayoutAlign="start">
+
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="70" fxLayoutAlign="start">
+      <p>
+        <span class="pl-20">(เก้าแสนหกหมื่นหนึ่งพันเจ็ดร้อยบาทถ้วน)</span>
+      </p>
+    </div>
+  </div>
+
+
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <p>-----------------------------------------------------------------------------</p>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <p>คำชี้แจง</p>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="center">
+      <p class="pl-20">เรียน ลธน. ผ่าน ผอ.สลธ.</p>
+    </div>
+  </div>
+
+
+</div>
+
 <div fxLayout="row wrap" class="containerfile">
   <div fxFlex="20" fxLayoutAlign="center" class="single-file" *ngFor="let file of files; let i = index">
     <img *ngIf="file.type === 'application/pdf'" src="https://image.flaticon.com/icons/svg/136/136522.svg" width="45px"
