--- a/src/app/main/proposal/form/proposalForm.component.html
+++ b/src/app/main/proposal/form/proposalForm.component.html
@@ -56,6 +56,9 @@
       <div class="content" (drop)="drop($event)"
       (dragover)="allowDrop($event)">
         <mat-tab-group fxFlex>
+          <mat-tab class="document" label="แบบฟอร์มประมาณการ (กผง003)" >
+            <iframe src='https://view.officeapps.live.com/op/embed.aspx?src=https://res.cloudinary.com/hhpl9pajl/raw/upload/v1582309842/%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%9F%E0%B8%AD%E0%B8%A3%E0%B9%8C%E0%B8%A1%E0%B8%82%E0%B9%89%E0%B8%AD%E0%B9%80%E0%B8%AA%E0%B8%99%E0%B8%AD%E0%B9%82%E0%B8%84%E0%B8%A3%E0%B8%87%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%9B%E0%B8%8A%E0%B8%AA.63_1_fahwvl.doc' width='100%' height='100%' frameborder='0'></iframe>
+          </mat-tab>
           <mat-tab label="แบบฟอร์มข้อเสนอโครงการ (กผง001)" >
            <app-form001 class="pt-2"  [proposalForm]="proposalForm" [lovData]="lovData"></app-form001>
           </mat-tab>
